bin_PROGRAMS=statsd-proxy
statsd_proxy_SOURCES=src/buf.c \
					 src/cfg.c \
					 src/config.c \
					 src/ctx.c \
					 src/event.c \
					 src/ketama.c \
					 src/log.c \
					 src/md5.c \
					 src/parser.c \
					 src/proxy.c \
					 src/statsd-proxy.c
statsd_proxy_CFLAGS=-std=c99 -D_GNU_SOURCE
statsd_proxy_LDFLAGS=-pthread
